<resources>
    <string name="app_name">tellmehow</string>
    <string name="button_start">Start</string>
    <string name="button_add_component">Add components</string>
    <string name="button_save">Save</string>
    <string name="add_component_title">New material</string>
    <string name="label_nationality">Nationality</string>
    <string name="label_information">Information</string>
    <string name="label_material">Material Name</string>
    <string name="copyright">2017. 10. 27 at jeju developed by\nWhy are we showers on the 7th floor?</string>
    <string name="i_need_help">I need the help.</string>
    <string name="i_need_help_title">Let\'s google it</string>
    <string name="more_trash">I have more trash</string>
    <string name="name">Name</string>
    <string name="material">Material :</string>
    <string name="category">Category :</string>
    <string name="barcode"><![CDATA[Barcode&QR]]></string>
    <string name="camera_permission_rationale">This app has a great feature based on barcode recognition. If you want to enable it, give the app access permission to the camera in the phone settings.</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="no_scan_results">No scanning result</string>
    <string name="no_result_database">No result from database</string>
    <array name="country_arrays">
        <item>United States</item>
        <item>Korea</item>
        <item>Canada</item>
    </array>
</resources>
