<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/result_background">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="17dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_bg">
                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/main_component_name"
                    android:layout_below="@id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/component_material_area"
                    android:layout_below="@id/main_component_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/material"
                        android:textColor="@color/textItem"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/main_component_material"
                        android:textColor="@color/textItem"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/recycle_info"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_below="@id/component_material_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.hackerton.tellmehow.view.NonScrollExpandableListView
                    android:id="@+id/expandableListView"
                    android:layout_below="@id/recycle_info"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="0.5dp" />

                <Button
                    android:id="@+id/component_button"
                    android:layout_below="@id/expandableListView"
                    android:layout_marginTop="10dp"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:background="@drawable/component_button"
                    android:textAllCaps="false"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/button_add_component"
                    android:textColor="@color/textFeedback"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/tree_image"
                    android:src="@drawable/trees"
                    android:layout_below="@id/component_button"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:id="@+id/more_trash_button"
                    android:layout_below="@id/tree_image"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/more_button"
                    android:text="@string/more_trash"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</layout>